# eventd-plugin-journald

./: CMakeLists.txt  README.md
man/: CMakeLists.txt  common-man.xml  config.ent.in  eventd-journald.conf.xml  eventd-journald.event.xml
src/: CMakeLists.txt  journald.c
